--- a/kubernetes-folder/deployment.yml
+++ b/kubernetes-folder/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: netflix-clone
-        image: snaket2628/netflix-clone
+        image: snaket2628/netflix-clone:latest
         ports:
         - containerPort: 80
